<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">furry_octo_waddle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_learn">Learn !</string>
    <string name="string_test">Test</string>
    <string name="string_add_words">Add new words</string>
    <string name="string_translate">Translate</string>
    <string name="add_button">Add !</string>
    <string name="string_delete">Delete</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_modify">Modify</string>
    <string name="string_save">Save!</string>
    <string name="string_add">Add it!</string>
    <string name="string_update">Update</string>
    <string name="string_answer">Ans</string>
    <string name="string_results">Results</string>
    <string name="string_settings">Settings</string>
    <string name="string_extra_mode">Extra</string>
    <string name="string_languages_displayed">The Languages</string>
    <string name="string_mylanguage">Language Of This Word</string>
    <string name="string_mylanguages_displayed">My Language</string>
    <string name="string_wordlanguage">Language Of This Word</string>
    <string name="red">French</string>
    <string name="blue">English</string>
    <string-array name="items">
    <item>Item 1</item>
    <item>Item 2</item>
    <item>Item 3</item>
    <item>Item 4</item>
    <item>Item 5</item>
    <item>Item 6</item>
</string-array>

</resources>