<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.furry_octo_waddle.activities.MainActivity"
    android:gravity="center" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical" >
        <Button
            android:id="@+id/buttonLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:height= "100dp"
            android:text="@string/string_learn"
            android:width="250dp"
    		android:background="@drawable/back" />

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:height="75dp"
            android:text="@string/string_test"
            android:width="200dp"
    		android:background="@drawable/back" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:height="75dp"
            android:text="@string/string_add_words"
            android:width="200dp"
    		android:background="@drawable/back" />

        <Button
            android:id="@+id/buttonTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:height="75dp"
            android:text="@string/string_translate"
            android:width="200dp"
    		android:background="@drawable/back" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>
